--- a/src/app/pages/profile/views/fav-products/fav-products.component.html
+++ b/src/app/pages/profile/views/fav-products/fav-products.component.html
@@ -40,8 +40,9 @@
       <ng-template #nofavproducts>
         <tr>
           <td></td>
-          <td> لا توجد عناصر بالمفضلة</td>
+    <h3 class="font-semibold text-center py-5">لا توجد عناصر بالمفضلة</h3>
         </tr>
+        <tr></tr>
       </ng-template>
     </tbody>
   </table>
