--- a/src/app/shared/cart-items/cart-items.component.html
+++ b/src/app/shared/cart-items/cart-items.component.html
@@ -75,7 +75,7 @@
   <tr>
     <td></td>
     <td></td>
-    <h3 class="font-semibold text-center">لا توجد عناصر بالسلة</h3>
+    <h3 class="font-semibold text-center py-5">لا توجد عناصر بالسلة</h3>
   </tr>
 </ng-template>
 </tbody>
