--- a/src/app/pages/dashboard/components/index/index.component.html
+++ b/src/app/pages/dashboard/components/index/index.component.html
@@ -4,7 +4,7 @@
 <!-- nav-bar -->
 <div class="mr-12 mt-24">
 <!-- app-breadcrumb -->
-<app-breadcrumb></app-breadcrumb>
+<!-- <app-breadcrumb></app-breadcrumb> -->
 <!-- app-breadcrumb -->
 
 <section class="dashboard rounded-3xl">
