--- a/src/app/pages/dashboard/components/products/products.component.html
+++ b/src/app/pages/dashboard/components/products/products.component.html
@@ -273,10 +273,10 @@
           <textarea formControlName="description" class="border border-gray-300 rounded-3xl p-2 text-right"></textarea>
         </div>
         <div class="flex flex-col col-span-2">
-          <label class="block mb-2 text-sm font-medium text-gray-900 " for="image"> رفع صورة للمنتج</label>
-          <input (change)="onFileChange($event)"
+          <label class="block mb-2 text-sm font-medium text-gray-900 " for="product_img"> رفع صورة للمنتج</label>
+          <input
             class=" w-full text-sm text-gray-900 border border-gray-300 rounded-3xl cursor-pointer bg-gray-50 focus:outline-none p-2  "
-            formControlName="image" name="image" aria-describedby="file_input_help" id="image" type="file">
+        (change)="onFileChange($event)"    name="product_img" aria-describedby="file_input_help" id="product_img" type="file">
           <p class="mt-1 text-sm text-gray-500 " id="file_input_help">PNG, JPG (MAX. 1024x1024px).</p>
         </div>
       </div>
