--- a/src/app/pages/dashboard/components/products/products.component.html
+++ b/src/app/pages/dashboard/components/products/products.component.html
@@ -74,7 +74,7 @@
               </svg>
             </button>
             <div *ngIf="showCategoryFilterDDL" id="filterDropdown"
-              class="absolute z-10 mt-52 lg:right-6  lg:w-1/12 sm:w-full p-3 bg-white rounded-3xl shadow ">
+              class="absolute z-10 mt-52 lg:right-6  lg:w-1/12 sm:w-[30%] p-3 bg-white rounded-3xl shadow ">
               <h6 class="mb-3 text-sm font-medium text-gray-900 text-left">Choose Category</h6>
               <ul class="space-y-2 text-sm" aria-labelledby="filterDropdownButton">
                 <li class="flex items-center" *ngFor="let category of categories;">
