--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -5,15 +5,15 @@
   <div class="fixed z-30 inset-0 backdrop-blur-sm md:block" (click)="onDismissClick()"></div>
 
   <div
-    class="w-[40%]  z-40 absolute top-1/4 left-1/3 rounded-3xl shadow-2xl  px-5 py-5 backdrop-blur-md bg-white" >
-    <div class="flex flex-col w-full max-w-3xl ">
+    class="w-[50%]   z-40 absolute top-1/4 left-1/4 mx-auto rounded-3xl shadow-2xl  px-5 py-5 backdrop-blur-md bg-white" >
+    <div class="flex flex-col w-full  ">
     <!-- Modal content -->
       <!-- Modal header -->
       <div class="modal-header">
         <ng-content select="[modal-header]"></ng-content>
       </div>
       <!-- Modal body -->
-      <div class="modal-body overflow-scroll mx-auto">
+      <div class="modal-body overflow-scroll ">
 
         <ng-content select="[modal-body]"></ng-content>
 
